[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/Final Score Container.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/RobotoBold32.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/RobotoBold18.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/RobotoBold14.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/FinalScore.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/Sort Options Arrow.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/Sort Options Box.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=2]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 105, 20 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 105, 20 )

[node name="FinalScore" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.85098, 0.356863, 0.807843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIPanel" type="TextureRect" parent="CenterContainer"]
margin_left = 300.0
margin_top = 70.0
margin_right = 660.0
margin_bottom = 470.0
texture = ExtResource( 1 )

[node name="Title" type="Label" parent="CenterContainer/UIPanel"]
margin_left = 56.0
margin_top = 15.0
margin_right = 303.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -4
custom_constants/shadow_offset_y = -4
text = "Final Scoring"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SortLabel" type="Label" parent="CenterContainer/UIPanel"]
margin_left = 94.0
margin_top = 72.0
margin_right = 158.0
margin_bottom = 92.0
rect_min_size = Vector2( 64, 20 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.996078, 0.996078, 0.996078, 1 )
text = "Sort By:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SortOptions" type="OptionButton" parent="CenterContainer/UIPanel"]
margin_left = 161.0
margin_top = 72.0
margin_right = 266.0
margin_bottom = 92.0
rect_min_size = Vector2( 105, 20 )
focus_mode = 0
custom_icons/arrow = ExtResource( 6 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_constants/arrow_margin = 2
enabled_focus_mode = 0
text = " Earnings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RankLines" type="VBoxContainer" parent="CenterContainer/UIPanel"]
margin_left = 36.0
margin_top = 97.0
margin_right = 324.0
margin_bottom = 343.0
rect_min_size = Vector2( 288, 246 )
custom_constants/separation = 13
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="HBoxContainer" parent="CenterContainer/UIPanel/RankLines"]
margin_right = 288.0
margin_bottom = 24.0
rect_min_size = Vector2( 288, 24 )
custom_constants/separation = 19

[node name="Rank" type="Label" parent="CenterContainer/UIPanel/RankLines/1"]
margin_right = 22.0
margin_bottom = 24.0
rect_min_size = Vector2( 22, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "#1"

[node name="Name" type="Label" parent="CenterContainer/UIPanel/RankLines/1"]
margin_left = 41.0
margin_right = 151.0
margin_bottom = 24.0
rect_min_size = Vector2( 110, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "KURTAMFJSF"

[node name="Kills" type="Label" parent="CenterContainer/UIPanel/RankLines/1"]
margin_left = 170.0
margin_right = 181.0
margin_bottom = 24.0
rect_min_size = Vector2( 11, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "1"

[node name="Earnings" type="Label" parent="CenterContainer/UIPanel/RankLines/1"]
margin_left = 200.0
margin_right = 288.0
margin_bottom = 24.0
rect_min_size = Vector2( 88, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "$100,000"

[node name="2" type="HBoxContainer" parent="CenterContainer/UIPanel/RankLines"]
margin_top = 37.0
margin_right = 288.0
margin_bottom = 61.0
rect_min_size = Vector2( 288, 24 )
custom_constants/separation = 19

[node name="Rank" type="Label" parent="CenterContainer/UIPanel/RankLines/2"]
margin_right = 22.0
margin_bottom = 24.0
rect_min_size = Vector2( 22, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "#2"

[node name="Name" type="Label" parent="CenterContainer/UIPanel/RankLines/2"]
margin_left = 41.0
margin_right = 151.0
margin_bottom = 24.0
rect_min_size = Vector2( 110, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "KURTAMFJSF"

[node name="Kills" type="Label" parent="CenterContainer/UIPanel/RankLines/2"]
margin_left = 170.0
margin_right = 181.0
margin_bottom = 24.0
rect_min_size = Vector2( 11, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "1"

[node name="Earnings" type="Label" parent="CenterContainer/UIPanel/RankLines/2"]
margin_left = 200.0
margin_right = 288.0
margin_bottom = 24.0
rect_min_size = Vector2( 88, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "$100,000"

[node name="3" type="HBoxContainer" parent="CenterContainer/UIPanel/RankLines"]
margin_top = 74.0
margin_right = 288.0
margin_bottom = 98.0
rect_min_size = Vector2( 288, 24 )
custom_constants/separation = 19

[node name="Rank" type="Label" parent="CenterContainer/UIPanel/RankLines/3"]
margin_right = 22.0
margin_bottom = 24.0
rect_min_size = Vector2( 22, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "#3"

[node name="Name" type="Label" parent="CenterContainer/UIPanel/RankLines/3"]
margin_left = 41.0
margin_right = 151.0
margin_bottom = 24.0
rect_min_size = Vector2( 110, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "KURTAMFJSF"

[node name="Kills" type="Label" parent="CenterContainer/UIPanel/RankLines/3"]
margin_left = 170.0
margin_right = 181.0
margin_bottom = 24.0
rect_min_size = Vector2( 11, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "1"

[node name="Earnings" type="Label" parent="CenterContainer/UIPanel/RankLines/3"]
margin_left = 200.0
margin_right = 288.0
margin_bottom = 24.0
rect_min_size = Vector2( 88, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "$100,000"

[node name="4" type="HBoxContainer" parent="CenterContainer/UIPanel/RankLines"]
margin_top = 111.0
margin_right = 288.0
margin_bottom = 135.0
rect_min_size = Vector2( 288, 24 )
custom_constants/separation = 19

[node name="Rank" type="Label" parent="CenterContainer/UIPanel/RankLines/4"]
margin_right = 22.0
margin_bottom = 24.0
rect_min_size = Vector2( 22, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "#4"

[node name="Name" type="Label" parent="CenterContainer/UIPanel/RankLines/4"]
margin_left = 41.0
margin_right = 151.0
margin_bottom = 24.0
rect_min_size = Vector2( 110, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "KURTAMFJSF"

[node name="Kills" type="Label" parent="CenterContainer/UIPanel/RankLines/4"]
margin_left = 170.0
margin_right = 181.0
margin_bottom = 24.0
rect_min_size = Vector2( 11, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "1"

[node name="Earnings" type="Label" parent="CenterContainer/UIPanel/RankLines/4"]
margin_left = 200.0
margin_right = 288.0
margin_bottom = 24.0
rect_min_size = Vector2( 88, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "$100,000"

[node name="5" type="HBoxContainer" parent="CenterContainer/UIPanel/RankLines"]
margin_top = 148.0
margin_right = 288.0
margin_bottom = 172.0
rect_min_size = Vector2( 288, 24 )
custom_constants/separation = 19

[node name="Rank" type="Label" parent="CenterContainer/UIPanel/RankLines/5"]
margin_right = 22.0
margin_bottom = 24.0
rect_min_size = Vector2( 22, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "#5"

[node name="Name" type="Label" parent="CenterContainer/UIPanel/RankLines/5"]
margin_left = 41.0
margin_right = 151.0
margin_bottom = 24.0
rect_min_size = Vector2( 110, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "KURTAMFJSF"

[node name="Kills" type="Label" parent="CenterContainer/UIPanel/RankLines/5"]
margin_left = 170.0
margin_right = 181.0
margin_bottom = 24.0
rect_min_size = Vector2( 11, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "1"

[node name="Earnings" type="Label" parent="CenterContainer/UIPanel/RankLines/5"]
margin_left = 200.0
margin_right = 288.0
margin_bottom = 24.0
rect_min_size = Vector2( 88, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "$100,000"

[node name="6" type="HBoxContainer" parent="CenterContainer/UIPanel/RankLines"]
margin_top = 185.0
margin_right = 288.0
margin_bottom = 209.0
rect_min_size = Vector2( 288, 24 )
custom_constants/separation = 19

[node name="Rank" type="Label" parent="CenterContainer/UIPanel/RankLines/6"]
margin_right = 22.0
margin_bottom = 24.0
rect_min_size = Vector2( 22, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "#6"

[node name="Name" type="Label" parent="CenterContainer/UIPanel/RankLines/6"]
margin_left = 41.0
margin_right = 151.0
margin_bottom = 24.0
rect_min_size = Vector2( 110, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "KURTAMFJSF"

[node name="Kills" type="Label" parent="CenterContainer/UIPanel/RankLines/6"]
margin_left = 170.0
margin_right = 181.0
margin_bottom = 24.0
rect_min_size = Vector2( 11, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "1"

[node name="Earnings" type="Label" parent="CenterContainer/UIPanel/RankLines/6"]
margin_left = 200.0
margin_right = 288.0
margin_bottom = 24.0
rect_min_size = Vector2( 88, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "$100,000"

[node name="7" type="HBoxContainer" parent="CenterContainer/UIPanel/RankLines"]
margin_top = 222.0
margin_right = 288.0
margin_bottom = 246.0
rect_min_size = Vector2( 288, 24 )
custom_constants/separation = 19

[node name="Rank" type="Label" parent="CenterContainer/UIPanel/RankLines/7"]
margin_right = 22.0
margin_bottom = 24.0
rect_min_size = Vector2( 22, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "#7"

[node name="Name" type="Label" parent="CenterContainer/UIPanel/RankLines/7"]
margin_left = 41.0
margin_right = 151.0
margin_bottom = 24.0
rect_min_size = Vector2( 110, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "KURTAMFJSF"

[node name="Kills" type="Label" parent="CenterContainer/UIPanel/RankLines/7"]
margin_left = 170.0
margin_right = 181.0
margin_bottom = 24.0
rect_min_size = Vector2( 11, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "1"

[node name="Earnings" type="Label" parent="CenterContainer/UIPanel/RankLines/7"]
margin_left = 200.0
margin_right = 288.0
margin_bottom = 24.0
rect_min_size = Vector2( 88, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "$100,000"

[node name="NewButtonLabel" type="Label" parent="CenterContainer/UIPanel"]
margin_left = 37.0
margin_top = 357.0
margin_right = 101.0
margin_bottom = 376.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="TextureButton" parent="CenterContainer/UIPanel"]
margin_left = 24.0
margin_top = 348.0
margin_right = 114.0
margin_bottom = 386.0
rect_min_size = Vector2( 90, 38 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayButtonLabel" type="Label" parent="CenterContainer/UIPanel"]
margin_left = 156.0
margin_top = 357.0
margin_right = 204.0
margin_bottom = 376.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Replay"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayButton" type="TextureButton" parent="CenterContainer/UIPanel"]
margin_left = 135.0
margin_top = 348.0
margin_right = 225.0
margin_bottom = 386.0
rect_min_size = Vector2( 90, 38 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButtonLabel" type="Label" parent="CenterContainer/UIPanel"]
margin_left = 275.0
margin_top = 357.0
margin_right = 307.0
margin_bottom = 376.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="CenterContainer/UIPanel"]
margin_left = 246.0
margin_top = 348.0
margin_right = 336.0
margin_bottom = 386.0
rect_min_size = Vector2( 90, 38 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="CenterContainer/UIPanel/SortOptions" to="." method="_on_SortOptions_item_selected"]
[connection signal="pressed" from="CenterContainer/UIPanel/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/UIPanel/ReplayButton" to="." method="_on_ReplayButton_pressed"]
[connection signal="pressed" from="CenterContainer/UIPanel/QuitButton" to="." method="_on_QuitButton_pressed"]
